# artref

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  tmux_session.sh
dev/: example.sh
src/artref/: main.py
src/artref/api/: main.py
src/artref/cli/: main.py
src/artref/core/: config.py  logging.py  main.py  models.py  service.py  session.py  types.py  utils.py
src/artref/core/sources/: __init__.py  scryfall.py  unsplash.py  wallhaven.py
src/cli/: main.py
src/core/: main.py
tests/: conftest.py  test_create_reference.py  test_download.py  test_main.py  test_session.py
tests/api/: test_fetch.py  test_route_sources.py
tests/cli/: test_cli.py
tests/core/: test_core.py  test_create_reference.py  test_download.py
