[project]
name = "artref"
version = "0.1.0"
# description = ""
requires-python = ">=3.7"
dependencies = [
  "aiocache",
  "aiohttp",
  "diskcache",
  "dotenv",
  "fastapi",
  "typer",
  "uvicorn",
]

[project.scripts]
artref = "artref.main:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]
