[project]
name = "artref"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
  "aiocache",
  "aiohttp",
  "aiohttp-retry",
  "diskcache",
  "dotenv",
  "fastapi",
  "pydantic",
  "pydantic-settings",
  "typer",
  "uvicorn",
]

[project.scripts]
artref = "artref.main:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
addopts = ["-m", "not network"]
markers = ["network: require network access"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
